--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
    /* banner styles  */
 .banner-section{
     background-color:#2D25A0;
+    width: 100%;
     height: 850px;
 }
 .banner-info{
@@ -58,4 +59,88 @@
 /*-------------------------------------------------
                  banner style end 
 ------------------------------------------------------*/
+
+
     
+   /*----- -----------------------------------------------------------------------------
+                           all players style start 
+----------------------------------------------------------------------------------*/
+                         /* first section  */
+
+
+.section-players{
+    width: 1700px;
+    margin-left: 450px;
+    
+    margin-top: 30 px; 
+    justify-content: center;  
+    display: grid; 
+    grid-template-columns: repeat(3, 1fr);
+    
+    
+}
+.player{
+    width: 520px;
+    margin: 20px;
+    padding: 5px;
+   background-color: #FFFFFF;
+   box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.15);
+}
+.section-players .player img{
+    width: 500px;
+    height: 470px;   
+}
+.player-info{
+    
+}
+.border{
+    overflow: hidden;
+}
+.border:hover{
+    
+    border: 5px solid lightblue;
+    
+    
+}
+                             /* -------------------------first section end ---------- */
+
+                             /* Footer style start  */
+ .footer-container{
+    margin-top: 100px;
+    width: 850px;
+    position: relative;
+    left: 850px;
+ }                            
+.footer-icon{
+    display: flex;
+    font-size: 40px;
+    margin-left: 20px;
+    position: relative;
+    left: 245px;
+}
+.icon{    
+    margin-left: 25px;
+    padding: 5px 5px 5px 5px ;
+    
+}
+.footer-info{
+    font-size: 30px;
+    position: relative;
+    left: 250px;
+}
+
+          /*--------------------------------------------------
+                          media  queries 
+          -------------------------------------------------------- */
+
+
+          /*---------------------------------------------------------------
+                       Mobile Devices
+        -------------------------------------------------------------- */
+@media only screen and (max-width:880px) {
+     
+    .banner-section{
+        background-color: red;
+        display:block;
+    }
+}       
