--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
    /* banner styles  */
 .banner-section{
     background-color:#2D25A0;
-    width: 100%;
+   width: 100%;
     height: 850px;
 }
 .banner-info{
@@ -20,7 +20,18 @@
 .banner-text{
     color:#FFFFFF;
     font-size: 64px;
-    width: 750px; 
+    width: 550px; 
+}
+.banner-image{
+    width: 
+    height: 600px;
+    margin-top: 100px;   
+}
+ .banner-image img{
+     width: 550px;
+     height: 550px;
+     padding: 10px;
+     margin-left: 30px;
 }
 .live-link{
     background-color: #E02C6D;  
@@ -38,17 +49,7 @@
 .live-link a .fas{
     margin-left: 15px;
 }
-.banner-image{
-    width: 
-    height: 700px;
-    margin-top: 100px;   
-}
- .banner-image img{
-     width: 950px;
-     height: 650px;
-     padding: 10px;
-     margin-left: 30px;
-}
+
 .live-link:hover{
     background-color: #2D25A0;
     font-size: 64px;
@@ -69,10 +70,10 @@
 
 
 .section-players{
-    width: 1700px;
-    margin-left: 450px;
-    
-    margin-top: 30 px; 
+    width: 1400px;
+    position: relative;
+    left: 590px;
+    margin-top: 40px; 
     justify-content: center;  
     display: grid; 
     grid-template-columns: repeat(3, 1fr);
@@ -80,26 +81,21 @@
     
 }
 .player{
-    width: 520px;
+    width: 420px;
     margin: 20px;
     padding: 5px;
    background-color: #FFFFFF;
    box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.15);
 }
 .section-players .player img{
-    width: 500px;
-    height: 470px;   
+    width: 400px;
+    height: 370px;   
 }
-.player-info{
-    
-}
-.border{
-    overflow: hidden;
-}
+
+
 .border:hover{
     
     border: 5px solid lightblue;
-    
     
 }
                              /* -------------------------first section end ---------- */
@@ -141,6 +137,10 @@
      
     .banner-section{
         background-color: red;
-        display:block;
+      
+    }
+    .player{
+
+        display: block;
     }
 }       
