--- a/style.css
+++ b/style.css
@@ -23,13 +23,11 @@
     width: 550px; 
 }
 .banner-image{
-    width: 
-    height: 600px;
-    margin-top: 100px;   
+      
 }
  .banner-image img{
-     width: 550px;
-     height: 550px;
+     width: 450px;
+     height: 450px;
      padding: 10px;
      margin-left: 30px;
 }
@@ -53,8 +51,9 @@
 .live-link:hover{
     background-color: #2D25A0;
     font-size: 64px;
-    transform: rotate(-10deg);
-    transition: 2s;  
+    transform: rotate(-5deg);
+    display: inline;
+     
 }
 
 /*-------------------------------------------------
@@ -70,25 +69,26 @@
 
 
 .section-players{
-    width: 1400px;
+    width: 1100px;
     position: relative;
-    left: 590px;
+    left: 770px;
     margin-top: 40px; 
     justify-content: center;  
     display: grid; 
     grid-template-columns: repeat(3, 1fr);
     
     
+    
 }
 .player{
-    width: 420px;
+    width: 330px;
     margin: 20px;
     padding: 5px;
    background-color: #FFFFFF;
    box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.15);
 }
 .section-players .player img{
-    width: 400px;
+    width: 315px;
     height: 370px;   
 }
 
@@ -102,8 +102,8 @@
 
                              /* Footer style start  */
  .footer-container{
-    margin-top: 100px;
-    width: 850px;
+    margin-top: 80px;
+    width: 420px;
     position: relative;
     left: 850px;
  }                            
