--- a/style.css
+++ b/style.css
@@ -9,8 +9,10 @@
    /* banner styles  */
 .banner-section{
     background-color:#2D25A0;
-   width: 100%;
+   width: 1500px;
     height: 850px;
+    position: relative;
+    left: 560px;
 }
 .banner-info{
     display: flex;
@@ -67,11 +69,14 @@
 ----------------------------------------------------------------------------------*/
                          /* first section  */
 
-
+.container{
+    width:100%;
+}
 .section-players{
     width: 1100px;
+    
     position: relative;
-    left: 300px;
+    left: 800px;
     margin-top: 40px; 
     justify-content: center;  
     display: grid; 
